--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "gatsby-plugin-sitemap": "^5.14.0",
     "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-source-filesystem": "^4.15.0",
-    "gatsby-source-strapi": "^2.0.0",
     "gatsby-transformer-remark": "^5.14.0",
     "gatsby-transformer-sharp": "^4.15.1",
+    "pure-react-carousel": "^1.28.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   }
 }
