--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@react-google-maps/api": "^2.12.0",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.14.1",
-    "gatsby-plugin-image": "^2.15.1",
+    "gatsby-plugin-image": "^2.24.0",
     "gatsby-plugin-react-helmet": "^5.14.0",
-    "gatsby-plugin-sharp": "^4.15.1",
+    "gatsby-plugin-sharp": "^4.24.0",
     "gatsby-plugin-sitemap": "^5.14.0",
     "gatsby-plugin-styled-components": "^5.14.0",
-    "gatsby-source-filesystem": "^4.15.0",
-    "gatsby-transformer-remark": "^5.14.0",
-    "gatsby-transformer-sharp": "^4.15.1",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-source-strapi": "^2.0.0",
+    "gatsby-transformer-remark": "^5.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
     "pure-react-carousel": "^1.28.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
