--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.12.0",
+    "axios": "^1.1.3",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.14.1",
     "gatsby-plugin-image": "^2.24.0",
@@ -27,6 +28,7 @@
     "gatsby-source-strapi": "^2.0.0",
     "gatsby-transformer-remark": "^5.24.0",
     "gatsby-transformer-sharp": "^4.24.0",
+    "js-search": "^2.0.0",
     "pure-react-carousel": "^1.28.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
